Added the user and admin endpoints. Implemented the generate refresh token service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#
+#security.jwt.secret-key=97yD9DBThCSxMpjmqm+xQ+9NWaFJRhdZl0edvC0aPNg=
+## 1h in millisecond
+#security.jwt.expiration-time=3600000
